fixing the header vertical alignment and document header + labels

--- a/code/media/koowa/com_koowa/scss/koowa/site/_header.scss
+++ b/code/media/koowa/com_koowa/scss/koowa/site/_header.scss
@@ -14,7 +14,6 @@
 
 .koowa_header__image {
   height: $iconSize;
-  margin-top: -.275em;
 }
 
 .koowa_header__item {
